--- a/config/locales/es.yml
+++ b/config/locales/es.yml
@@ -1,6 +1,8 @@
 es:
   label_click_to_enlarge_reduce: "Haga click para ampliar/reducir"
+  label_collapse_all: "Ocultar hijas"
   label_estimated_speed: "Velocidad estimada"
+  label_expand_all: "Mostrar todas"
   label_f_day: "%{value} día"
   label_f_day_plural: "%{value} días"
   label_f_week: "%{value} semana"
